tests/integration/features/views/_validations/04_default_view_doesnt_exist/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Default view 'NON_EXISTING_VIEW' does not exist in the document.
CHECK: Location: {{.*}}input.sdoc:3:1
CHECK: Hint: Make sure that the specified default view is created in the VIEWS configuration.
